# quantum_cryptocurrency

./: .gitmodules  Dockerfile  README.md  blockchain.json  docker-compose.yml  init.sh  install.sh  setup.py  start.sh  tests.sh
quantum_crypto/: README.md  __init__.py  blockchain.json  package.json  pyproject.toml  requirements.txt
quantum_crypto/architecture/: README.md  architecture.md
quantum_crypto/completion/: README.md
quantum_crypto/completion/deployment/: deploy_instructions.md  rollback_strategy.md
quantum_crypto/completion/documentation/: deployment_guide.md  technical_docs.md  user_guide.md
quantum_crypto/completion/testing/: __init__.py  conftest.py  integration_tests.py  system_tests.py  test_cases.md  test_consensus.py  test_network.py  test_network_advanced.py  test_plan.md  test_quantum_hash.py  test_quantum_keys.py  test_quantum_resources.py  test_storage.py  test_transactions.py  test_unit.py  unit_tests.py
quantum_crypto/config/: config.py  logging.conf  sample.env
quantum_crypto/pseudocode/: README.md  pseudocode.md
quantum_crypto/refinement/: README.md  maintainability_refactors.md  performance_improvements.md  refinement_notes.md
quantum_crypto/specification/: README.md  objectives.md  requirements.md  tech_stack.md  ui_ux.md  user_scenarios.md
quantum_crypto/src/: main.py
quantum_crypto/src/classical_integration/: __init__.py  network.py  node.py  storage.py  transactions.py
quantum_crypto/src/config/: config.py
quantum_crypto/src/quantum_crypto/: __init__.py
quantum_crypto/src/quantum_currency/: __init__.py  (+6 more)
(+46 files in other folders)
