[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_crypto"
version = "0.1.0"
authors = [
    { name = "Quantum Cryptocurrency Team" }
]
description = "A quantum-resistant cryptocurrency implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "cryptography>=44.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.16.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_crypto*"]
namespaces = false

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.16.0",
    "pytest-cov>=2.12.0"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["completion/testing"]
python_files = ["test_*.py"]
pythonpath = [
    "src"
]
